# django_namespaces

./: .gitignore  404.html  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: labeler.yml
.github/workflows/: bandit.yml  codeql.yml  deploy-documentation.yml  lint.yml  tox.yml
api/: index.html
django_namespace_permissions/: __init__.py  admin.py  apps.py  constants.py  mixins.py  models.py  serializers.py  urls.py  views.py
django_namespace_permissions/migrations/: 0001_initial.py
django_namespace_permissions/tests/: __init__.py  test_00_core.py
django_namespaces/: admin.py  apps.py  constants.py  exceptions.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
django_namespaces/migrations/: 0001_initial.py  0002_alter_namespacepermission_options_and_more.py
django_namespaces/tests/: __init__.py  test_00_core.py
django_namespaces_testproject/: __init__.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
django_namespaces_testproject/migrations/: 0001_initial.py
django_namespaces_testproject/tests/: __init__.py  test_00_core.py  test_01_usage.py  test_10_object_permissions.py
docs/: api.md  index.md  installation.md
installation/: index.html
search/: search_index.json
testproject/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
testproject/migrations/: 0001_initial.py
testproject/templates/: test_view.html
testproject/tests/: __init__.py  test_00_core.py  test_01_usage.py  test_10_object_permissions.py
